Allow multiple forms per page
Thanks to Simon Bächler for providing an example implementation.

Convert the form template to HTML5 while at it.

--- a/form_designer/templates/content/form/form.html
+++ b/form_designer/templates/content/form/form.html
@@ -5,11 +5,12 @@
   {% endif %}
   {% if form %}
   <form method="post" action="#form{{ content.id }}">{% csrf_token %}
+    <input type="hidden" name="fc{{ content.id }}" value="1">
     <table>
       {{ form }}
       <tr>
         <td>&nbsp;</td>
-        <td><input type="submit" value="{% trans "Submit" %}" /></td>
+        <td><input type="submit" value="{% trans "Submit" %}"></td>
       </tr>
     </table>
   </form>
