--- a/form_designer/templates/admin/form_designer/form/change_form.html
+++ b/form_designer/templates/admin/form_designer/form/change_form.html
@@ -1,8 +1,9 @@
 {% extends "admin/change_form.html" %}
 
-{% block form_top %}
-  {% if original %}
-    <p><a href="export_submissions/">Export submissions</a></p>
-  {% endif %}
-  {{ block.super }}
+{% load i18n %}
+
+{% block object-tools-items %}
+{% if original %}<li><a href="export_submissions">{% trans "Export submissions" %}</a></li>{% endif %}
+<li><a href="history/" class="historylink">{% trans "History" %}</a></li>
+{% if has_absolute_url %}<li><a href="../../../r/{{ content_type_id }}/{{ object_id }}/" class="viewsitelink">{% trans "View on site" %}</a></li>{% endif%}
 {% endblock %}
